feat: accessories CRUD, garage search, and validation script enhancements
- Add AccessoireService and AccessoireController for vehicle accessories CRUD
- Extend GarageService with fuel+accessory search and inject repositories
- Add /api/v1/garages/search endpoint in GarageController
- Enhance validate-garage-service.ps1 to include vehicles-by-model, garages list, accessories flow, and search results
- Minor stream API and import cleanups